--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           context: .
           push: true
-          file: ./Dockerfile
+          file: ./src/Dockerfile
           tags: |
             lucasviniciusom/fake-shop:v${{ github.run_number }}
             lucasviniciusom/fake-shop:latest
